--- a/imagersite/imager_images/templates/imager_images/photo.html
+++ b/imagersite/imager_images/templates/imager_images/photo.html
@@ -28,7 +28,7 @@
 {% for photo in photos %}
 {% if request.user.is_authenticated and photo.published == 'PUBLIC' %}
         <h3>{{photo.title}}</h3>
-        <a href="/profile/{{ photo.user.user }}">{{ photo.user.user }}</a>
+        <a href="/profile/{{ photo.user.user }}">{{ user.profile.photo }}</a>
         <div class="col-lg-3 col-md-4 col-xs-6">
           <a href="/profile/{{photo.user.user}}" class="d-block mb-4 h-100">
             <img class="img-fluid" src={{ photo.docfile.url }} alt="My image"/>
