--- a/imagersite/imager_images/templates/imager_images/library.html
+++ b/imagersite/imager_images/templates/imager_images/library.html
@@ -32,12 +32,12 @@
 
 {% for album in albums %}
         <h3>{{album.title}}</h3>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid" src={{ album.docfile.url }} alt="My Album"/>
-          </a>
-          <p>{{album.description}}</p>
-          <h4>Uploaded: {{album.date_uploaded}}
+        <a href="{% url 'album' pk=album.id %}">
+            <div class="col-lg-3 col-md-4 col-xs-6">
+            <img class="img-fluid" src= {{ album.cover.url }} alt="My Album"/>
+            <p>{{album.description}}</p>
+            <h4>Uploaded: {{album.date_uploaded}}
+        </a>
         </div>
 {% endfor %}
 
@@ -47,13 +47,12 @@
 
 {% for photo in photos %}
         <h3>{{photo.title}}</h3>
-        <a href="/profile/{{ photo.user.user }}">{{ photo.user.user }}</a>
+        <a href="{% url 'photo' pk=photo.id %}">
         <div class="col-lg-3 col-md-4 col-xs-6">
-          <a href="/profile/{{photo.user.user}}" class="d-block mb-4 h-100">
-            <img class="img-fluid" src={{ photo.docfile.url }} alt="My image"/>
-          </a>
+          <img class="img-fluid" src="{{ photo.image.url }}" alt="My image"/>
           <p>{{photo.description}}</p>
           <h4>Uploaded: {{photo.date_uploaded}}</h4>
         </div>
+        </a>
 {% endfor %}
 {% endblock %}
