--- a/imagersite/imager_profile/templates/imager_profile/add_album.html
+++ b/imagersite/imager_profile/templates/imager_profile/add_album.html
@@ -24,7 +24,7 @@
 
 {% if request.user.is_authenticated %}
 <div class='reg_form'>
-<h1>Add a Ablum</h1>
+<h1>Add An Album</h1>
     <section>
         <form method="POST" enctype="multipart/form-data" class='reg_form'>
             {% csrf_token %}
