--- a/imagersite/imager_profile/templates/imager_profile/edit_profile.html
+++ b/imagersite/imager_profile/templates/imager_profile/edit_profile.html
@@ -26,7 +26,8 @@
 <div class='reg_form'>
 <h1>Edit Profile</h1>
     <section>
-        <form method="PUT">
+        <form method="POST">
+            {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Submit">
         </form>
