--- a/imagersite/imager_images/templates/imager_images/album.html
+++ b/imagersite/imager_images/templates/imager_images/album.html
@@ -25,16 +25,25 @@
 <hr class="divider">
 <hr class="divider">
 
-{% for album in albums %}
+
 {% if request.user.is_authenticated and album.published == 'PUBLIC' %}
         <h3><a class="portfolio-link" href="album/{{ album.id }}">{{album.title}}</h3>
         <div class="col-lg-3 col-md-4 col-xs-6">
           <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid" src={{ album.docfile.url }} alt="My Album"/>
+            <img class="img-fluid" src={{ album.cover.url }} alt="My Album"/>
           </a>
           <p>{{album.description}}</p>
           <h4>Uploaded: {{album.date_uploaded}}
         </div>
-{% endif %}
+{% for photo in photos %}
+        <h3>{{photo.title}}</h3>
+        <a href="{% url 'photo' pk=photo.id %}">
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <img class="img-fluid" src="{{ photo.image.url }}" alt="My image"/>
+          <p>{{photo.description}}</p>
+          <h4>Uploaded: {{photo.date_uploaded}}</h4>
+        </div>
+        </a>
 {% endfor %}
+{% endif %}
 {% endblock %}
