--- a/imagersite/imagersite/templates/imagersite/base.html
+++ b/imagersite/imagersite/templates/imagersite/base.html
@@ -27,10 +27,11 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4">
         <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none">            
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none">
             {% if request.user.is_authenticated %}
                 <h2>Hello {{ request.user.username }}</h2>
-            {% endif %}</a>
+            {% endif %}
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
