--- a/imagersite/imager_images/templates/imager_images/library.html
+++ b/imagersite/imager_images/templates/imager_images/library.html
@@ -3,7 +3,9 @@
 
 {% block css%}
 {% load static %}
+<link href="{% static 'css/thumbnail-gallery.css' %}" rel="stylesheet">
 <link href="{% static 'css/library.css' %}" rel="stylesheet">
+<link href="{% static 'bootstrap/css/bootstrap-grid.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block nav %}
@@ -36,8 +38,9 @@
             <div class="col-lg-3 col-md-4 col-xs-6">
             <img class="img-fluid" src= {{ album.cover.url }} alt="My Album"/>
             <p>{{album.description}}</p>
-            <h4>Uploaded: {{album.date_uploaded}}
+            <h4>Uploaded: {{album.date_uploaded}}</h4>
         </a>
+        <a href="{% url 'edit_album' pk=album.id %}">Edit Album</a>
         </div>
 {% endfor %}
 
@@ -54,5 +57,6 @@
           <h4>Uploaded: {{photo.date_uploaded}}</h4>
         </div>
         </a>
+        <a href="{% url 'edit_image' pk=phot.id %}">Edit Photo</a>
 {% endfor %}
 {% endblock %}
